Doc: Ensured that text in tables is not too large.

--- a/doc/src/template/style/offline.css
+++ b/doc/src/template/style/offline.css
@@ -111,7 +111,6 @@
         background-color: #F6F6F6;
         border: 1px solid #E6E6E6;
         border-collapse: separate;
-        font-size: 110%;
         margin-bottom: 2.5em;
     }
     pre {
